<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">Error occurred. Please try again.</string>
    <string name="title_sort_by_toprated">Top Rated</string>
    <string name="title_sort_by_popular">Popular</string>
    <string name="title_show_favorites">Favorites</string>
    <string name="original_language">Original Language</string>
    <string name="user_rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="plot">Plot</string>
    <string name="title">Title</string>
    <string name="original_title">Original Title</string>
    <string name="movie_poster">Movie poster</string>
    <string name="movie_poster_description">Movie poster</string>
    <string name="no_trailers">No trailers</string>
    <string name="no_reviews">No reviews</string>
    <string name="content_divider">Content divider</string>
    <string name="trailers_lbl">Trailers</string>
    <string name="reviews_lbl">Reviews</string>
    <string name="no_apps_trailer">No apps for playing Youtube videos installed!</string>
    <string name="no_apps_review">No apps for showing MovieDB review installed!</string>
    <string name="trailer_contentDescription">Trailer: %1$s</string>
</resources>
